Cross Origin test

--- a/test/test-remote.css
+++ b/test/test-remote.css
@@ -3,5 +3,5 @@
       Warning: Adding more variables will require changes in
       test.js to prevent false positives
      */
-    --secondaryColor : #F7D24B;
+    --remoteProp : #AABBCC;
 }
